--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {
+      font-size: 1.875em;
+    }
+    h2 {
+      font-size: 1.4em;
+  
+    }
+    h3 {
+      font-size: 1.25em;
+    }
+  }
